Update favicon and document metadata for improved SEO and branding

--- a/styles/sections/projects/featured.module.scss
+++ b/styles/sections/projects/featured.module.scss
@@ -99,6 +99,13 @@
 	img {
 		display: none;
 	}
+
+}
+@media (max-width: 500px) {
+	.project {
+		min-height: 650px;
+		height: auto;
+	}
 }
 
 .imageContainer {
